# Ai-Chatbot

Nexus/: .gitignore  build.sh  pyproject.toml  render.yaml  requirements.txt
Nexus/logonai/: apps.py  urls.py  views.py
Nexus/moodyai/: apps.py  forms.py  urls.py  views.py
Nexus/portfolio/: settings_base.py  urls.py  urls_dev.py  views.py  wsgi.py
Nexus/portfolio/settings/: dev.py  prod.py
Nexus/templates/: base.html
Nexus/templates/layouts/: footer.html  navbar.html
Nexus/templates/moodyai/: index.html
Nexus/templates/pages/: about.html
Nexus/theme/static_src/: package-lock.json  package.json  tailwind.config.js
